new code adding traking in emails

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ MONGO_URI="mongodb://ahmed:zkZt5fykt4LdoIUh@cluster0-shard-00-00.py4ci.mongodb.n
 EMAIL_USER="alcaotar@zohomail.com"
 EMAIL_PASS="wsz3KqZS2A62"
 PORT=80
+APP_URL="ec2-13-60-192-178.eu-north-1.compute.amazonaws.com"
