--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
-
 {
-  "type":"commonjs",
+  "type": "commonjs",
   "name": "emails-sender",
   "version": "1.0.0",
   "main": "server.js",
@@ -13,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bull": "^4.16.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "mongodb": "^6.11.0",
