adding alcaotar.agency

--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 MONGO_URI="mongodb://ahmed:zkZt5fykt4LdoIUh@cluster0-shard-00-00.py4ci.mongodb.net:27017,cluster0-shard-00-01.py4ci.mongodb.net:27017,cluster0-shard-00-02.py4ci.mongodb.net:27017/?ssl=true&replicaSet=atlas-y0v9nm-shard-0&authSource=admin&retryWrites=true&w=majority&appName=Cluster0"
-EMAIL_USER="alcaotar@zohomail.com"
-EMAIL_PASS="wsz3KqZS2A62"
+EMAIL_USER1="alcaotar@zohomail.com"
+EMAIL_USER2="ahmed@alcaotar.agency"
+EMAIL_PASS1="wsz3KqZS2A62"
+EMAIL_PASS2="3R8js0fCUr3s"
 PORT=80
 APP_URL="ec2-13-60-192-178.eu-north-1.compute.amazonaws.com"
